[package]
name = "profig"
version = "0.1.0"
edition = "2021"

[dependencies]
profig-macros = { path = "./profig-macros" }
profig-commons = { path = "./profig-commons" }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
serde_json = "1.0.141"

[dependencies.proc-macro2]
version = "1"
