# [package]
# name = "profig"
# version = "0.1.0"
# edition = "2021"
# # build = "build.rs"
#
# [features]
# default = []
# toml = ["dep:toml"]
# json = []
# yaml = ["dep:serde_yaml"]
#
# [dependencies]
# profig-macros = { path = "./profig-macros" }
# profig-commons = { path = "./profig-commons" }
# serde = { version = "1.0.219", features = ["derive"] }
# toml = { version = "0.9.2", optional = true }
# serde_json = "1.0.141"
# regex = "1.11.1"
# serde_yaml = { version = "0.9.34", optional = true }
#
# [dependencies.proc-macro2]
# version = "1"

[workspace]
members = [
  "profig",
  "profig-macros",
  "profig-commons"
]
resolver = "2"

