[package]
name = "profig-macros"
version = "0.1.0"
edition = "2021"
description = "Helper crate for Profig, providing the procedural macros of Profig."
license = "MIT"
repository = "https://github.com/aether-flux/profig"
readme = "../README.md"
keywords = ["config", "validation", "schema", "serde", "macros"]
categories = ["config", "development-tools::build-utils"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
profig-commons = { path = "../profig-commons", version = "0.1.0" }

